// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DelegateRegistrationForm should error if username is too long 1`] = `
<DocumentFragment>
  <div>
    <div
      data-testid="tab-pabel__active-panel"
    >
      <section
        class="space-y-8"
        data-testid="DelegateRegistrationForm__form-step"
      >
        <div
          class="flex justify-between items-end bg-theme-background"
        >
          <div
            class="space-y-4"
          >
            <h1
              class="mb-0 text-4xl"
              data-testid="header__title"
            >
              Register Delegate
            </h1>
            <div
              class="text-theme-secondary-text"
              data-testid="header__subtitle"
            >
              Make up a name and register your delegate online.
            </div>
          </div>
        </div>
        <div
          class="flex overflow-hidden flex-col space-y-4 rounded-lg p-4 bg-theme-warning-50 dark:bg-theme-secondary-800 sm:space-y-0 sm:space-x-4 sm:flex-row sm:items-center"
        >
          <div
            class="h-11 w-11 flex flex-shrink-0 items-center justify-center rounded-lg text-white bg-theme-warning-600"
          >
            <div
              class="sc-bdfBwQ hteSKx"
              height="1.25em"
              width="1.25em"
            >
              <svg>
                alert-warning.svg
              </svg>
            </div>
          </div>
          <div
            class="flex flex-col"
          >
            <p
              class="text-sm leading-relaxed break-words dark:text-theme-secondary-500"
            >
              Keep in mind that you cannot change the name of your delegate after the registration has been registered on the blockchain.
            </p>
          </div>
        </div>
        <div
          class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 kPECcj undefined no-ligatures"
          data-testid="TransactionDetail"
        >
          <div
            class="flex-1 space-y-2"
          >
            <div
              class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
            >
              Sender
            </div>
            <div
              class="font-semibold"
            >
              <div
                class="inline-flex items-center no-ligatures"
              >
                <span
                  class="max-w-24 flex-auto truncate mr-2 font-semibold text-base text-theme-text"
                  data-testid="address__wallet-name"
                >
                  <span
                    class="TruncateEnd__Wrapper-sc-1w1nvb9-0"
                    data-testid="TruncateEnd"
                  >
                    ARK Wallet 1
                  </span>
                </span>
                <span
                  class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-secondary-500 dark:text-theme-secondary-700 truncate font-semibold text-base"
                  data-testid="address__wallet-address"
                >
                  D8rr7B…s6YUYD
                </span>
              </div>
            </div>
          </div>
          <div
            class="flex items-center -space-x-2"
          >
            <div
              class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gyYbkb"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full"
              >
                <img
                  alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                  title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="space-y-8"
        >
          <fieldset
            class="FormField__FormFieldStyled-yeauwd-0 qzrKg flex flex-col space-y-2"
          >
            <label
              class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
              data-testid="FormLabel"
              for="username"
            >
              Delegate Name
              <div
                class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
                data-testid="FormLabel__required"
              />
            </label>
            <div
              class="InputGroup__InputGroupStyle-sc-1obbdqe-3 iqafwD"
            >
              <input
                aria-invalid="true"
                class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures pr-12"
                data-testid="Input__username"
                name="username"
                value="thisisaveryveryverylongdelegatename"
              />
              <div
                class="InputGroup__InputAddonStyle-sc-1obbdqe-0 InputGroup__InputAddonEndStyle-sc-1obbdqe-2 epSJiV bWrKSO my-px mr-4"
              >
                <span
                  data-errortext="'Delegate Name' should have at most 20 characters"
                  data-testid="Input-error"
                >
                  <div
                    class="sc-bdfBwQ iyevwF text-theme-danger-500"
                    height="20"
                    width="20"
                  >
                    <svg>
                      alert-warning.svg
                    </svg>
                  </div>
                </span>
              </div>
            </div>
          </fieldset>
          <fieldset
            class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
          >
            <label
              class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
              data-testid="FormLabel"
              for="fee"
            >
              Transaction Fee
              <div
                class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
                data-testid="FormLabel__required"
              />
            </label>
            <div
              class="flex space-x-2"
              data-testid="InputFee"
            >
              <div
                class="flex-1"
              >
                <div
                  class="InputGroup__InputGroupStyle-sc-1obbdqe-3 iqafwD"
                >
                  <input
                    class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures"
                    data-testid="InputCurrency"
                    name="fee"
                    type="text"
                    value="2"
                  />
                  <div
                    class="absolute bottom-0 px-1 w-full"
                  >
                    <div
                      class="flex flex-wrap justify-center"
                      data-testid="Range"
                    >
                      <div
                        class="Range__Track-sc-10itqc2-0 sgjTD"
                        data-testid="Range__track"
                        style="transform: scale(1); cursor: pointer;"
                      >
                        <div
                          class="Range__TrackFilled-sc-10itqc2-1 egFfKP"
                          data-testid="Range__track__filled"
                        >
                          <div
                            aria-valuemax="10"
                            aria-valuemin="0"
                            aria-valuenow="2"
                            class="Range__Thumb-sc-10itqc2-2 hXgqqU"
                            data-testid="Range__thumb"
                            draggable="false"
                            role="slider"
                            style="position: absolute; z-index: 0; cursor: grab; user-select: none; transform: translate(0px, 0px);"
                            tabindex="0"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="inline-flex overflow-hidden items-center space-x-2"
                data-testid="ButtonGroup"
                role="radiogroup"
              >
                <button
                  aria-checked="false"
                  class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 cQPjbG"
                  data-testid="ButtonGroupOption"
                  disabled=""
                  role="radio"
                  type="button"
                >
                  Slow
                </button>
                <button
                  aria-checked="false"
                  class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 cQPjbG"
                  data-testid="ButtonGroupOption"
                  role="radio"
                  type="button"
                >
                  Average
                </button>
                <button
                  aria-checked="false"
                  class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 cQPjbG"
                  data-testid="ButtonGroupOption"
                  role="radio"
                  type="button"
                >
                  Fast
                </button>
              </div>
            </div>
          </fieldset>
        </div>
      </section>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DelegateRegistrationForm should render form step 1`] = `
<DocumentFragment>
  <div>
    <div
      data-testid="tab-pabel__active-panel"
    >
      <section
        class="space-y-8"
        data-testid="DelegateRegistrationForm__form-step"
      >
        <div
          class="flex justify-between items-end bg-theme-background"
        >
          <div
            class="space-y-4"
          >
            <h1
              class="mb-0 text-4xl"
              data-testid="header__title"
            >
              Register Delegate
            </h1>
            <div
              class="text-theme-secondary-text"
              data-testid="header__subtitle"
            >
              Make up a name and register your delegate online.
            </div>
          </div>
        </div>
        <div
          class="flex overflow-hidden flex-col space-y-4 rounded-lg p-4 bg-theme-warning-50 dark:bg-theme-secondary-800 sm:space-y-0 sm:space-x-4 sm:flex-row sm:items-center"
        >
          <div
            class="h-11 w-11 flex flex-shrink-0 items-center justify-center rounded-lg text-white bg-theme-warning-600"
          >
            <div
              class="sc-bdfBwQ hteSKx"
              height="1.25em"
              width="1.25em"
            >
              <svg>
                alert-warning.svg
              </svg>
            </div>
          </div>
          <div
            class="flex flex-col"
          >
            <p
              class="text-sm leading-relaxed break-words dark:text-theme-secondary-500"
            >
              Keep in mind that you cannot change the name of your delegate after the registration has been registered on the blockchain.
            </p>
          </div>
        </div>
        <div
          class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 kPECcj undefined no-ligatures"
          data-testid="TransactionDetail"
        >
          <div
            class="flex-1 space-y-2"
          >
            <div
              class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
            >
              Sender
            </div>
            <div
              class="font-semibold"
            >
              <div
                class="inline-flex items-center no-ligatures"
              >
                <span
                  class="max-w-24 flex-auto truncate mr-2 font-semibold text-base text-theme-text"
                  data-testid="address__wallet-name"
                >
                  <span
                    class="TruncateEnd__Wrapper-sc-1w1nvb9-0"
                    data-testid="TruncateEnd"
                  >
                    ARK Wallet 1
                  </span>
                </span>
                <span
                  class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-secondary-500 dark:text-theme-secondary-700 truncate font-semibold text-base"
                  data-testid="address__wallet-address"
                >
                  D8rr7B…s6YUYD
                </span>
              </div>
            </div>
          </div>
          <div
            class="flex items-center -space-x-2"
          >
            <div
              class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gyYbkb"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full"
              >
                <img
                  alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                  title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="space-y-8"
        >
          <fieldset
            class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
          >
            <label
              class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
              data-testid="FormLabel"
              for="username"
            >
              Delegate Name
              <div
                class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
                data-testid="FormLabel__required"
              />
            </label>
            <div
              class="InputGroup__InputGroupStyle-sc-1obbdqe-3 iqafwD"
            >
              <input
                class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures"
                data-testid="Input__username"
                name="username"
                value=""
              />
            </div>
          </fieldset>
          <fieldset
            class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
          >
            <label
              class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
              data-testid="FormLabel"
              for="fee"
            >
              Transaction Fee
              <div
                class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
                data-testid="FormLabel__required"
              />
            </label>
            <div
              class="flex space-x-2"
              data-testid="InputFee"
            >
              <div
                class="flex-1"
              >
                <div
                  class="InputGroup__InputGroupStyle-sc-1obbdqe-3 iqafwD"
                >
                  <input
                    class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures"
                    data-testid="InputCurrency"
                    name="fee"
                    type="text"
                    value="2"
                  />
                  <div
                    class="absolute bottom-0 px-1 w-full"
                  >
                    <div
                      class="flex flex-wrap justify-center"
                      data-testid="Range"
                    >
                      <div
                        class="Range__Track-sc-10itqc2-0 sgjTD"
                        data-testid="Range__track"
                        style="transform: scale(1); cursor: pointer;"
                      >
                        <div
                          class="Range__TrackFilled-sc-10itqc2-1 egFfKP"
                          data-testid="Range__track__filled"
                        >
                          <div
                            aria-valuemax="10"
                            aria-valuemin="0"
                            aria-valuenow="2"
                            class="Range__Thumb-sc-10itqc2-2 hXgqqU"
                            data-testid="Range__thumb"
                            draggable="false"
                            role="slider"
                            style="position: absolute; z-index: 0; cursor: grab; user-select: none; transform: translate(0px, 0px);"
                            tabindex="0"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="inline-flex overflow-hidden items-center space-x-2"
                data-testid="ButtonGroup"
                role="radiogroup"
              >
                <button
                  aria-checked="false"
                  class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 cQPjbG"
                  data-testid="ButtonGroupOption"
                  disabled=""
                  role="radio"
                  type="button"
                >
                  Slow
                </button>
                <button
                  aria-checked="false"
                  class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 cQPjbG"
                  data-testid="ButtonGroupOption"
                  role="radio"
                  type="button"
                >
                  Average
                </button>
                <button
                  aria-checked="false"
                  class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 cQPjbG"
                  data-testid="ButtonGroupOption"
                  role="radio"
                  type="button"
                >
                  Fast
                </button>
              </div>
            </div>
          </fieldset>
        </div>
      </section>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DelegateRegistrationForm should render review step 1`] = `
<DocumentFragment>
  <div>
    <div
      data-testid="tab-pabel__active-panel"
    >
      <section
        data-testid="DelegateRegistrationForm__review-step"
      >
        <div
          class="flex justify-between items-end bg-theme-background"
        >
          <div
            class="space-y-4"
          >
            <h1
              class="mb-0 text-4xl"
              data-testid="header__title"
            >
              Register Delegate
            </h1>
            <div
              class="text-theme-secondary-text"
              data-testid="header__subtitle"
            >
              Make up a name and register your delegate online.
            </div>
          </div>
        </div>
        <div
          class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 coAmnd mt-8 no-ligatures"
          data-testid="TransactionDetail"
        >
          <div
            class="flex-1 space-y-2"
          >
            <div
              class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
            >
              Cryptoasset
            </div>
            <div
              class="font-semibold"
            >
              ARK Devnet
            </div>
          </div>
          <div
            aria-label="ARK Devnet"
            class="Circle-uw7h4j-0 JkqUV border-theme-primary-100 text-theme-primary-400"
            data-testid="NetworkIcon-ARK-ark.devnet"
          >
            <div
              class="sc-bdfBwQ iyevwF"
              data-testid="NetworkIcon__icon"
              height="20"
              width="20"
            >
              <svg>
                ark.svg
              </svg>
            </div>
          </div>
        </div>
        <div
          class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 hqOyLp undefined no-ligatures"
          data-testid="TransactionDetail"
        >
          <div
            class="flex-1 space-y-2"
          >
            <div
              class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
            >
              Sender
            </div>
            <div
              class="font-semibold"
            >
              <div
                class="inline-flex items-center no-ligatures"
              >
                <span
                  class="max-w-24 flex-auto truncate mr-2 font-semibold text-base text-theme-text"
                  data-testid="address__wallet-name"
                >
                  <span
                    class="TruncateEnd__Wrapper-sc-1w1nvb9-0"
                    data-testid="TruncateEnd"
                  >
                    ARK Wallet 1
                  </span>
                </span>
                <span
                  class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-secondary-500 dark:text-theme-secondary-700 truncate font-semibold text-base"
                  data-testid="address__wallet-address"
                >
                  D8rr7B…s6YUYD
                </span>
              </div>
            </div>
          </div>
          <div
            class="flex items-center -space-x-2"
          >
            <div
              class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gyYbkb"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full"
              >
                <img
                  alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                  title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 hqOyLp undefined no-ligatures"
          data-testid="TransactionDetail"
        >
          <div
            class="flex-1 space-y-2"
          >
            <div
              class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
            >
              Delegate Name
            </div>
            <div
              class="font-semibold"
            />
          </div>
        </div>
        <div
          class="mt-2"
        >
          <div
            class="rounded-lg border border-theme-secondary-300 dark:border-theme-secondary-800"
          >
            <div
              class="relative p-4"
            >
              <div
                class="flex divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800"
              >
                <div
                  class="flex flex-col w-1/2 justify-center px-4 py-2"
                >
                  <span
                    class="TotalAmountBox__AmountLabel-sc-178fnso-0 gGuMGd"
                  >
                    Transaction Amount
                  </span>
                  <span
                    class="mt-1 text-lg font-semibold"
                    data-testid="total-amount-box__transaction-amount"
                  >
                    0 DARK
                  </span>
                </div>
                <div
                  class="flex flex-col w-1/2 justify-center px-4 py-2 text-right"
                >
                  <span
                    class="TotalAmountBox__AmountLabel-sc-178fnso-0 gGuMGd"
                  >
                    Transaction Fee
                  </span>
                  <span
                    class="mt-1 text-lg font-semibold"
                    data-testid="total-amount-box__transaction-fee"
                  >
                    2 DARK
                  </span>
                </div>
              </div>
              <div
                class="absolute transform top-1/2 -translate-y-1/2 left-1/2 -translate-x-1/2"
              >
                <div
                  class="py-2 ml-px bg-theme-background text-theme-secondary-900 dark:text-theme-secondary-600"
                >
                  <div
                    class="sc-bdfBwQ fPrsah"
                    height="1em"
                    width="1em"
                  >
                    <svg>
                      plus.svg
                    </svg>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="flex flex-col items-center py-6 rounded-b-lg border-t border-theme-secondary-300 dark:border-theme-secondary-800 justfiy-center bg-theme-secondary-100 dark:bg-theme-secondary-800"
            >
              <span
                class="TotalAmountBox__AmountLabel-sc-178fnso-0 gGuMGd"
              >
                Total Amount
              </span>
              <span
                class="text-2xl font-bold"
                data-testid="total-amount-box__total"
              >
                2 DARK
              </span>
            </div>
          </div>
        </div>
      </section>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DelegateRegistrationForm should set fee 1`] = `
<DocumentFragment>
  <div>
    <div
      data-testid="tab-pabel__active-panel"
    >
      <section
        class="space-y-8"
        data-testid="DelegateRegistrationForm__form-step"
      >
        <div
          class="flex justify-between items-end bg-theme-background"
        >
          <div
            class="space-y-4"
          >
            <h1
              class="mb-0 text-4xl"
              data-testid="header__title"
            >
              Register Delegate
            </h1>
            <div
              class="text-theme-secondary-text"
              data-testid="header__subtitle"
            >
              Make up a name and register your delegate online.
            </div>
          </div>
        </div>
        <div
          class="flex overflow-hidden flex-col space-y-4 rounded-lg p-4 bg-theme-warning-50 dark:bg-theme-secondary-800 sm:space-y-0 sm:space-x-4 sm:flex-row sm:items-center"
        >
          <div
            class="h-11 w-11 flex flex-shrink-0 items-center justify-center rounded-lg text-white bg-theme-warning-600"
          >
            <div
              class="sc-bdfBwQ hteSKx"
              height="1.25em"
              width="1.25em"
            >
              <svg>
                alert-warning.svg
              </svg>
            </div>
          </div>
          <div
            class="flex flex-col"
          >
            <p
              class="text-sm leading-relaxed break-words dark:text-theme-secondary-500"
            >
              Keep in mind that you cannot change the name of your delegate after the registration has been registered on the blockchain.
            </p>
          </div>
        </div>
        <div
          class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 kPECcj undefined no-ligatures"
          data-testid="TransactionDetail"
        >
          <div
            class="flex-1 space-y-2"
          >
            <div
              class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
            >
              Sender
            </div>
            <div
              class="font-semibold"
            >
              <div
                class="inline-flex items-center no-ligatures"
              >
                <span
                  class="max-w-24 flex-auto truncate mr-2 font-semibold text-base text-theme-text"
                  data-testid="address__wallet-name"
                >
                  <span
                    class="TruncateEnd__Wrapper-sc-1w1nvb9-0"
                    data-testid="TruncateEnd"
                  >
                    ARK Wallet 1
                  </span>
                </span>
                <span
                  class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-secondary-500 dark:text-theme-secondary-700 truncate font-semibold text-base"
                  data-testid="address__wallet-address"
                >
                  D8rr7B…s6YUYD
                </span>
              </div>
            </div>
          </div>
          <div
            class="flex items-center -space-x-2"
          >
            <div
              class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gyYbkb"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full"
              >
                <img
                  alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                  title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="space-y-8"
        >
          <fieldset
            class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
          >
            <label
              class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
              data-testid="FormLabel"
              for="username"
            >
              Delegate Name
              <div
                class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
                data-testid="FormLabel__required"
              />
            </label>
            <div
              class="InputGroup__InputGroupStyle-sc-1obbdqe-3 iqafwD"
            >
              <input
                class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures"
                data-testid="Input__username"
                name="username"
                value=""
              />
            </div>
          </fieldset>
          <fieldset
            class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
          >
            <label
              class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
              data-testid="FormLabel"
              for="fee"
            >
              Transaction Fee
              <div
                class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
                data-testid="FormLabel__required"
              />
            </label>
            <div
              class="flex space-x-2"
              data-testid="InputFee"
            >
              <div
                class="flex-1"
              >
                <div
                  class="InputGroup__InputGroupStyle-sc-1obbdqe-3 iqafwD"
                >
                  <input
                    class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures"
                    data-testid="InputCurrency"
                    name="fee"
                    type="text"
                    value="10"
                  />
                  <div
                    class="absolute bottom-0 px-1 w-full"
                  >
                    <div
                      class="flex flex-wrap justify-center"
                      data-testid="Range"
                    >
                      <div
                        class="Range__Track-sc-10itqc2-0 sgjTD"
                        data-testid="Range__track"
                        style="transform: scale(1); cursor: pointer;"
                      >
                        <div
                          class="Range__TrackFilled-sc-10itqc2-1 egFfKP"
                          data-testid="Range__track__filled"
                        >
                          <div
                            aria-valuemax="10"
                            aria-valuemin="0"
                            aria-valuenow="10"
                            class="Range__Thumb-sc-10itqc2-2 hXgqqU"
                            data-testid="Range__thumb"
                            draggable="false"
                            role="slider"
                            style="position: absolute; z-index: 0; cursor: grab; user-select: none; transform: translate(0px, 0px);"
                            tabindex="0"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="inline-flex overflow-hidden items-center space-x-2"
                data-testid="ButtonGroup"
                role="radiogroup"
              >
                <button
                  aria-checked="false"
                  class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 cQPjbG"
                  data-testid="ButtonGroupOption"
                  disabled=""
                  role="radio"
                  type="button"
                >
                  Slow
                </button>
                <button
                  aria-checked="false"
                  class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 cQPjbG"
                  data-testid="ButtonGroupOption"
                  role="radio"
                  type="button"
                >
                  Average
                </button>
                <button
                  aria-checked="true"
                  class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 cQPjbG"
                  data-testid="ButtonGroupOption"
                  role="radio"
                  type="button"
                >
                  Fast
                </button>
              </div>
            </div>
          </fieldset>
        </div>
      </section>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DelegateRegistrationForm should set username 1`] = `
<DocumentFragment>
  <div>
    <div
      data-testid="tab-pabel__active-panel"
    >
      <section
        class="space-y-8"
        data-testid="DelegateRegistrationForm__form-step"
      >
        <div
          class="flex justify-between items-end bg-theme-background"
        >
          <div
            class="space-y-4"
          >
            <h1
              class="mb-0 text-4xl"
              data-testid="header__title"
            >
              Register Delegate
            </h1>
            <div
              class="text-theme-secondary-text"
              data-testid="header__subtitle"
            >
              Make up a name and register your delegate online.
            </div>
          </div>
        </div>
        <div
          class="flex overflow-hidden flex-col space-y-4 rounded-lg p-4 bg-theme-warning-50 dark:bg-theme-secondary-800 sm:space-y-0 sm:space-x-4 sm:flex-row sm:items-center"
        >
          <div
            class="h-11 w-11 flex flex-shrink-0 items-center justify-center rounded-lg text-white bg-theme-warning-600"
          >
            <div
              class="sc-bdfBwQ hteSKx"
              height="1.25em"
              width="1.25em"
            >
              <svg>
                alert-warning.svg
              </svg>
            </div>
          </div>
          <div
            class="flex flex-col"
          >
            <p
              class="text-sm leading-relaxed break-words dark:text-theme-secondary-500"
            >
              Keep in mind that you cannot change the name of your delegate after the registration has been registered on the blockchain.
            </p>
          </div>
        </div>
        <div
          class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 kPECcj undefined no-ligatures"
          data-testid="TransactionDetail"
        >
          <div
            class="flex-1 space-y-2"
          >
            <div
              class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
            >
              Sender
            </div>
            <div
              class="font-semibold"
            >
              <div
                class="inline-flex items-center no-ligatures"
              >
                <span
                  class="max-w-24 flex-auto truncate mr-2 font-semibold text-base text-theme-text"
                  data-testid="address__wallet-name"
                >
                  <span
                    class="TruncateEnd__Wrapper-sc-1w1nvb9-0"
                    data-testid="TruncateEnd"
                  >
                    ARK Wallet 1
                  </span>
                </span>
                <span
                  class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-secondary-500 dark:text-theme-secondary-700 truncate font-semibold text-base"
                  data-testid="address__wallet-address"
                >
                  D8rr7B…s6YUYD
                </span>
              </div>
            </div>
          </div>
          <div
            class="flex items-center -space-x-2"
          >
            <div
              class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gyYbkb"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full"
              >
                <img
                  alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                  title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="space-y-8"
        >
          <fieldset
            class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
          >
            <label
              class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
              data-testid="FormLabel"
              for="username"
            >
              Delegate Name
              <div
                class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
                data-testid="FormLabel__required"
              />
            </label>
            <div
              class="InputGroup__InputGroupStyle-sc-1obbdqe-3 iqafwD"
            >
              <input
                class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures"
                data-testid="Input__username"
                name="username"
                value="test_delegate"
              />
            </div>
          </fieldset>
          <fieldset
            class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
          >
            <label
              class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
              data-testid="FormLabel"
              for="fee"
            >
              Transaction Fee
              <div
                class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
                data-testid="FormLabel__required"
              />
            </label>
            <div
              class="flex space-x-2"
              data-testid="InputFee"
            >
              <div
                class="flex-1"
              >
                <div
                  class="InputGroup__InputGroupStyle-sc-1obbdqe-3 iqafwD"
                >
                  <input
                    class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures"
                    data-testid="InputCurrency"
                    name="fee"
                    type="text"
                    value="2"
                  />
                  <div
                    class="absolute bottom-0 px-1 w-full"
                  >
                    <div
                      class="flex flex-wrap justify-center"
                      data-testid="Range"
                    >
                      <div
                        class="Range__Track-sc-10itqc2-0 sgjTD"
                        data-testid="Range__track"
                        style="transform: scale(1); cursor: pointer;"
                      >
                        <div
                          class="Range__TrackFilled-sc-10itqc2-1 egFfKP"
                          data-testid="Range__track__filled"
                        >
                          <div
                            aria-valuemax="10"
                            aria-valuemin="0"
                            aria-valuenow="2"
                            class="Range__Thumb-sc-10itqc2-2 hXgqqU"
                            data-testid="Range__thumb"
                            draggable="false"
                            role="slider"
                            style="position: absolute; z-index: 0; cursor: grab; user-select: none; transform: translate(0px, 0px);"
                            tabindex="0"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="inline-flex overflow-hidden items-center space-x-2"
                data-testid="ButtonGroup"
                role="radiogroup"
              >
                <button
                  aria-checked="false"
                  class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 cQPjbG"
                  data-testid="ButtonGroupOption"
                  disabled=""
                  role="radio"
                  type="button"
                >
                  Slow
                </button>
                <button
                  aria-checked="false"
                  class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 cQPjbG"
                  data-testid="ButtonGroupOption"
                  role="radio"
                  type="button"
                >
                  Average
                </button>
                <button
                  aria-checked="false"
                  class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 cQPjbG"
                  data-testid="ButtonGroupOption"
                  role="radio"
                  type="button"
                >
                  Fast
                </button>
              </div>
            </div>
          </fieldset>
        </div>
      </section>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DelegateRegistrationForm should show error if username already exists 1`] = `
<DocumentFragment>
  <div>
    <div
      data-testid="tab-pabel__active-panel"
    >
      <section
        class="space-y-8"
        data-testid="DelegateRegistrationForm__form-step"
      >
        <div
          class="flex justify-between items-end bg-theme-background"
        >
          <div
            class="space-y-4"
          >
            <h1
              class="mb-0 text-4xl"
              data-testid="header__title"
            >
              Register Delegate
            </h1>
            <div
              class="text-theme-secondary-text"
              data-testid="header__subtitle"
            >
              Make up a name and register your delegate online.
            </div>
          </div>
        </div>
        <div
          class="flex overflow-hidden flex-col space-y-4 rounded-lg p-4 bg-theme-warning-50 dark:bg-theme-secondary-800 sm:space-y-0 sm:space-x-4 sm:flex-row sm:items-center"
        >
          <div
            class="h-11 w-11 flex flex-shrink-0 items-center justify-center rounded-lg text-white bg-theme-warning-600"
          >
            <div
              class="sc-bdfBwQ hteSKx"
              height="1.25em"
              width="1.25em"
            >
              <svg>
                alert-warning.svg
              </svg>
            </div>
          </div>
          <div
            class="flex flex-col"
          >
            <p
              class="text-sm leading-relaxed break-words dark:text-theme-secondary-500"
            >
              Keep in mind that you cannot change the name of your delegate after the registration has been registered on the blockchain.
            </p>
          </div>
        </div>
        <div
          class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 kPECcj undefined no-ligatures"
          data-testid="TransactionDetail"
        >
          <div
            class="flex-1 space-y-2"
          >
            <div
              class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
            >
              Sender
            </div>
            <div
              class="font-semibold"
            >
              <div
                class="inline-flex items-center no-ligatures"
              >
                <span
                  class="max-w-24 flex-auto truncate mr-2 font-semibold text-base text-theme-text"
                  data-testid="address__wallet-name"
                >
                  <span
                    class="TruncateEnd__Wrapper-sc-1w1nvb9-0"
                    data-testid="TruncateEnd"
                  >
                    ARK Wallet 1
                  </span>
                </span>
                <span
                  class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-secondary-500 dark:text-theme-secondary-700 truncate font-semibold text-base"
                  data-testid="address__wallet-address"
                >
                  D8rr7B…s6YUYD
                </span>
              </div>
            </div>
          </div>
          <div
            class="flex items-center -space-x-2"
          >
            <div
              class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gyYbkb"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full"
              >
                <img
                  alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                  title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="space-y-8"
        >
          <fieldset
            class="FormField__FormFieldStyled-yeauwd-0 qzrKg flex flex-col space-y-2"
          >
            <label
              class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
              data-testid="FormLabel"
              for="username"
            >
              Delegate Name
              <div
                class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
                data-testid="FormLabel__required"
              />
            </label>
            <div
              class="InputGroup__InputGroupStyle-sc-1obbdqe-3 iqafwD"
            >
              <input
                aria-invalid="true"
                class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures pr-12"
                data-testid="Input__username"
                name="username"
                value="arkx"
              />
              <div
                class="InputGroup__InputAddonStyle-sc-1obbdqe-0 InputGroup__InputAddonEndStyle-sc-1obbdqe-2 epSJiV bWrKSO my-px mr-4"
              >
                <span
                  data-errortext="'Delegate Name' already exists"
                  data-testid="Input-error"
                >
                  <div
                    class="sc-bdfBwQ iyevwF text-theme-danger-500"
                    height="20"
                    width="20"
                  >
                    <svg>
                      alert-warning.svg
                    </svg>
                  </div>
                </span>
              </div>
            </div>
          </fieldset>
          <fieldset
            class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
          >
            <label
              class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
              data-testid="FormLabel"
              for="fee"
            >
              Transaction Fee
              <div
                class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
                data-testid="FormLabel__required"
              />
            </label>
            <div
              class="flex space-x-2"
              data-testid="InputFee"
            >
              <div
                class="flex-1"
              >
                <div
                  class="InputGroup__InputGroupStyle-sc-1obbdqe-3 iqafwD"
                >
                  <input
                    class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures"
                    data-testid="InputCurrency"
                    name="fee"
                    type="text"
                    value="2"
                  />
                  <div
                    class="absolute bottom-0 px-1 w-full"
                  >
                    <div
                      class="flex flex-wrap justify-center"
                      data-testid="Range"
                    >
                      <div
                        class="Range__Track-sc-10itqc2-0 sgjTD"
                        data-testid="Range__track"
                        style="transform: scale(1); cursor: pointer;"
                      >
                        <div
                          class="Range__TrackFilled-sc-10itqc2-1 egFfKP"
                          data-testid="Range__track__filled"
                        >
                          <div
                            aria-valuemax="10"
                            aria-valuemin="0"
                            aria-valuenow="2"
                            class="Range__Thumb-sc-10itqc2-2 hXgqqU"
                            data-testid="Range__thumb"
                            draggable="false"
                            role="slider"
                            style="position: absolute; z-index: 0; cursor: grab; user-select: none; transform: translate(0px, 0px);"
                            tabindex="0"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="inline-flex overflow-hidden items-center space-x-2"
                data-testid="ButtonGroup"
                role="radiogroup"
              >
                <button
                  aria-checked="false"
                  class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 cQPjbG"
                  data-testid="ButtonGroupOption"
                  disabled=""
                  role="radio"
                  type="button"
                >
                  Slow
                </button>
                <button
                  aria-checked="false"
                  class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 cQPjbG"
                  data-testid="ButtonGroupOption"
                  role="radio"
                  type="button"
                >
                  Average
                </button>
                <button
                  aria-checked="false"
                  class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 cQPjbG"
                  data-testid="ButtonGroupOption"
                  role="radio"
                  type="button"
                >
                  Fast
                </button>
              </div>
            </div>
          </fieldset>
        </div>
      </section>
    </div>
  </div>
</DocumentFragment>
`;

exports[`DelegateRegistrationForm should show error if username contains illegal characters 1`] = `
<DocumentFragment>
  <div>
    <div
      data-testid="tab-pabel__active-panel"
    >
      <section
        class="space-y-8"
        data-testid="DelegateRegistrationForm__form-step"
      >
        <div
          class="flex justify-between items-end bg-theme-background"
        >
          <div
            class="space-y-4"
          >
            <h1
              class="mb-0 text-4xl"
              data-testid="header__title"
            >
              Register Delegate
            </h1>
            <div
              class="text-theme-secondary-text"
              data-testid="header__subtitle"
            >
              Make up a name and register your delegate online.
            </div>
          </div>
        </div>
        <div
          class="flex overflow-hidden flex-col space-y-4 rounded-lg p-4 bg-theme-warning-50 dark:bg-theme-secondary-800 sm:space-y-0 sm:space-x-4 sm:flex-row sm:items-center"
        >
          <div
            class="h-11 w-11 flex flex-shrink-0 items-center justify-center rounded-lg text-white bg-theme-warning-600"
          >
            <div
              class="sc-bdfBwQ hteSKx"
              height="1.25em"
              width="1.25em"
            >
              <svg>
                alert-warning.svg
              </svg>
            </div>
          </div>
          <div
            class="flex flex-col"
          >
            <p
              class="text-sm leading-relaxed break-words dark:text-theme-secondary-500"
            >
              Keep in mind that you cannot change the name of your delegate after the registration has been registered on the blockchain.
            </p>
          </div>
        </div>
        <div
          class="TransactionDetail__TransactionDetailStyled-sc-15h16fu-0 kPECcj undefined no-ligatures"
          data-testid="TransactionDetail"
        >
          <div
            class="flex-1 space-y-2"
          >
            <div
              class="text-sm font-semibold text-theme-secondary-700 no-ligatures"
            >
              Sender
            </div>
            <div
              class="font-semibold"
            >
              <div
                class="inline-flex items-center no-ligatures"
              >
                <span
                  class="max-w-24 flex-auto truncate mr-2 font-semibold text-base text-theme-text"
                  data-testid="address__wallet-name"
                >
                  <span
                    class="TruncateEnd__Wrapper-sc-1w1nvb9-0"
                    data-testid="TruncateEnd"
                  >
                    ARK Wallet 1
                  </span>
                </span>
                <span
                  class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-secondary-500 dark:text-theme-secondary-700 truncate font-semibold text-base"
                  data-testid="address__wallet-address"
                >
                  D8rr7B…s6YUYD
                </span>
              </div>
            </div>
          </div>
          <div
            class="flex items-center -space-x-2"
          >
            <div
              class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gyYbkb"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full"
              >
                <img
                  alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                  title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="space-y-8"
        >
          <fieldset
            class="FormField__FormFieldStyled-yeauwd-0 qzrKg flex flex-col space-y-2"
          >
            <label
              class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
              data-testid="FormLabel"
              for="username"
            >
              Delegate Name
              <div
                class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
                data-testid="FormLabel__required"
              />
            </label>
            <div
              class="InputGroup__InputGroupStyle-sc-1obbdqe-3 iqafwD"
            >
              <input
                aria-invalid="true"
                class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures pr-12"
                data-testid="Input__username"
                name="username"
                value="<invalid>"
              />
              <div
                class="InputGroup__InputAddonStyle-sc-1obbdqe-0 InputGroup__InputAddonEndStyle-sc-1obbdqe-2 epSJiV bWrKSO my-px mr-4"
              >
                <span
                  data-errortext="The following characters are not allowed: '<', '>'"
                  data-testid="Input-error"
                >
                  <div
                    class="sc-bdfBwQ iyevwF text-theme-danger-500"
                    height="20"
                    width="20"
                  >
                    <svg>
                      alert-warning.svg
                    </svg>
                  </div>
                </span>
              </div>
            </div>
          </fieldset>
          <fieldset
            class="FormField__FormFieldStyled-yeauwd-0 cnlnjc flex flex-col space-y-2"
          >
            <label
              class="inline-block flex mb-2 text-sm font-semibold transition-colors duration-100 FormLabel text-theme-secondary-700"
              data-testid="FormLabel"
              for="fee"
            >
              Transaction Fee
              <div
                class="mt-1 ml-1 w-1 h-1 rounded-full bg-theme-danger-400"
                data-testid="FormLabel__required"
              />
            </label>
            <div
              class="flex space-x-2"
              data-testid="InputFee"
            >
              <div
                class="flex-1"
              >
                <div
                  class="InputGroup__InputGroupStyle-sc-1obbdqe-3 iqafwD"
                >
                  <input
                    class="Input__InputStyled-wu99qs-0 eVdxgh overflow-hidden w-full bg-theme-background appearance-none rounded border border-theme-secondary-400 dark:border-theme-secondary-700 text-theme-text transition-colors duration-200 px-4 py-3 no-ligatures"
                    data-testid="InputCurrency"
                    name="fee"
                    type="text"
                    value="2"
                  />
                  <div
                    class="absolute bottom-0 px-1 w-full"
                  >
                    <div
                      class="flex flex-wrap justify-center"
                      data-testid="Range"
                    >
                      <div
                        class="Range__Track-sc-10itqc2-0 sgjTD"
                        data-testid="Range__track"
                        style="transform: scale(1); cursor: pointer;"
                      >
                        <div
                          class="Range__TrackFilled-sc-10itqc2-1 egFfKP"
                          data-testid="Range__track__filled"
                        >
                          <div
                            aria-valuemax="10"
                            aria-valuemin="0"
                            aria-valuenow="2"
                            class="Range__Thumb-sc-10itqc2-2 hXgqqU"
                            data-testid="Range__thumb"
                            draggable="false"
                            role="slider"
                            style="position: absolute; z-index: 0; cursor: grab; user-select: none; transform: translate(0px, 0px);"
                            tabindex="0"
                          />
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="inline-flex overflow-hidden items-center space-x-2"
                data-testid="ButtonGroup"
                role="radiogroup"
              >
                <button
                  aria-checked="false"
                  class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 cQPjbG"
                  data-testid="ButtonGroupOption"
                  disabled=""
                  role="radio"
                  type="button"
                >
                  Slow
                </button>
                <button
                  aria-checked="false"
                  class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 cQPjbG"
                  data-testid="ButtonGroupOption"
                  role="radio"
                  type="button"
                >
                  Average
                </button>
                <button
                  aria-checked="false"
                  class="ButtonGroup__ButtonGroupOptionStyled-sc-1u00raz-0 cQPjbG"
                  data-testid="ButtonGroupOption"
                  role="radio"
                  type="button"
                >
                  Fast
                </button>
              </div>
            </div>
          </fieldset>
        </div>
      </section>
    </div>
  </div>
</DocumentFragment>
`;
